--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>老婆情人节快乐！</title>	    
+		<title>我们两周年啦！</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
 		<script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -22,20 +22,23 @@
         <div id="main">
             <audio controls="controls" autoplay="autoplay">
                 <source src="/file/love.mp3" type="audio/mpeg" />
-              Your browser does not support the audio element.
+                love is love
               </audio>
             <div id="wrap">
                 <div id="text">
                     <div id="code"> <font color="#FF0000"> 
-                        <span class="say"> 我的世界变得奇妙 </span><br>
-                        <span class="say"> 更难以言喻 </span><br>
-                        <span class="say"> 还以为    </span><br>
-                        <span class="say"> 是从天而降的梦境 </span><br>
-                        <span class="say"> 直到确定 </span><br>
-                        <span class="say"> 手的温度来自你心里 </span><br>
-                        <span class="say"> 这一刻 </span><br>
-                        <span class="say"> 我终于勇敢说爱你 </span><br>
-                        <span class="say"> 你是我这辈子最大的幸运！ </span><br>
+                        <span class="say"> 亲爱的，我们在一起两年啦！ </span><br>
+                        <span class="say"> 和你分别的日子里， </span><br>
+                        <span class="say"> 我总是想让时间过得快一些， </span><br>
+                        <span class="say"> 最好一眨眼就能见到你。 </span><br>
+                        <span class="say"> 有你相伴的日子里， </span><br>
+                        <span class="say"> 我总是想让时间过得慢一些， </span><br>
+                        <span class="say"> 最好能让光阴停滞。 </span><br>
+                        <span class="say"> 你总是问我什么是爱， </span><br>
+                        <span class="say"> 现在我想告诉你： </span><br>
+                        <span class="say"> 我所有前进的动力都是你， </span><br>
+                        <span class="say"> 只要一想起你我就充满力量， </span><br>
+                        <span class="say"> 爱就是我想一辈子跟你在一起。 </span><br>
                         <span class="say"><span class="space"></span> --马也</span> </font>
                           <br />
                           <br />
