--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <span class="say"> 现在我想告诉你： </span><br>
                         <span class="say"> 我所有前进的动力都是你， </span><br>
                         <span class="say"> 只要一想起你我就充满力量， </span><br>
-                        <span class="say"> 爱就是我想一辈子跟你在一起。 </span><br>
+                        <span class="say"> 爱就是我想一辈子跟你在一起！ </span><br>
                         <span class="say"><span class="space"></span> --马也</span> </font>
                           <br />
                           <br />
